--- a/Pronia/Areas/Admin/Views/Slider/Index.cshtml
+++ b/Pronia/Areas/Admin/Views/Slider/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model List<Slider>
 @{
     ViewData["Title"] = "Index";
+    int TableNo = 1;
 }
 
 <div class="card shadow mb-4">
@@ -12,12 +13,11 @@
         <table class="table table-bordered table-stripped">
             <thead>
                 <tr>
-                    <th scope="col">#</th>
+                    <th scope="col">Id</th>
                     <th scope="col">Image</th>
                     <th scope="col">Title</th>
                     <th scope="col">Subtitle</th>
                     <th scope="col">Link</th>
-                    <th scope="col">File</th>
                     <th colspan=" 3" scope="col">Action</th>
                 </tr>
             </thead>
@@ -25,19 +25,29 @@
                 @foreach(var item in Model)
                 {
                     <tr>
-                        <td>@item.Id</td>
-                        <td>img src="~/imgs/sliders/@item.ImageUrl" width="50px"/</td>
+                        <td>@(TableNo ++)</td>
+                        <td>
+                            <img src="~/imgs/sliders/@item.ImageUrl" width="50px"/>
+                        </td>
                         <td>@item.Title </td>
                         <td>@item.Subtitle </td>
                         <td>@item.Link </td>
                         <td>
-                            <a class="btn btn-success"asp-action="Update" asp-controller="Slider" asp-roote-id="@item.Id"></a>
+                            <a class="btn btn-success"asp-action="Update" asp-controller="Slider" asp-route-id="@item.Id">Update</a>
                         </td>
                         <td>
-                            <a class ="btn btn-danger" asp-action="Delete" asp-controller="Slider" asp-roote-id="@item.Id"></a>
+                            <a class ="btn btn-danger" asp-action="Delete" asp-controller="Slider" asp-route-id="@item.Id">Delete</a>
                         </td>
                         <td>
-                            <a class="btn btn-warning" asp-action="Hide" asp-controller="Slider" asp-roote-id="@item.Id"></a>
+                            @if (item.IsDeleted == false)
+                            {
+                                <a class="btn btn-warning" asp-action="Hide" asp-controller="Slider" asp-route-id="@item.Id">Hide</a>
+                            }
+                            @if(item.IsDeleted == true)
+                            {
+                                <a class="btn btn-secondary" asp-action="Show" asp-controller="Slider" asp-route-id="@item.Id">Show</a>
+                            }
+
                         </td>
 
 
